Disable logging to stdout by default

Summary:
Do not log to stdout by default since ktorrent logs are very verbose and
pollute session log (e.g. xsession-errors), while ktorrent manages it's
own log files in ~/.local/share/ktorrent.

Add command line option to enable logging to stadnard output again, if
needed.

Remove some duplicate headers.

BUG: 368114

Reviewers: stikonas

Subscribers: ltoscano

Differential Revision: https://phabricator.kde.org/D8438